508 Compliance Checked Vendor contract history paging NaN bug fixed Disabled Obligated Amount, PoP & Agency filter Refresh on hitting back button fixed Hover over texts

--- a/app/frontend/src/app/app.component.html
+++ b/app/frontend/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div id="discovery">
-  <a class="usa-skipnav" href="#main-content">Skip to main content</a>
-  <section class="usa-banner">
+  <section class="usa-banner" aria-label="Official government website">
+    <a class="usa-skipnav" href="#main-content">Skip to main content</a>
+
     <div class="usa-accordion">
       <header class="usa-banner-header">
         <div class="usa-grid usa-banner-inner">
@@ -52,7 +53,7 @@
         </div>
         <button class="usa-menu-btn">Menu</button>
       </div>
-      <nav role="navigation" class="usa-nav">
+      <nav class="usa-nav">
         <div class="usa-nav-inner">
           <button class="usa-nav-close">
             <img src="{{APP_ASSETS}}assets/uswds/img/close.svg" alt="close">
@@ -149,7 +150,7 @@
       <div class="usa-width-one-fourth">
         <h3>Your Opinion Matters!</h3>
         <p>Tell us what you think by submitting
-          <a href="mailto:pshc-dev@gsa.gov">feedback</a>.</p>
+          <a href="mailto:pshc-dev@gsa.gov" aria-label="Send us your feedback">feedback</a>.</p>
       </div>
 
     </div>
