--- a/app/frontend/src/app/pages/search/tbl-vendors.component.html
+++ b/app/frontend/src/app/pages/search/tbl-vendors.component.html
@@ -17,7 +17,10 @@
                 <th></th>
                 <th scope="col">Company</th>
                 <th scope="col" [hidden]="service_categories_selected.length===0">Eligible Service Categories</th>
-                <th scope="col" class="sbd">Contracts</th>
+                <th scope="col" class="sbd tooltip-top" data-tooltip="Contract count for 5
+                years of work related
+                to search">Contract
+                    Actions</th>
                 <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Small Disadvantaged Business">SB</th>
                 <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Small Disadvantaged Business">SDB</th>
                 <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="8(A)">8(A)</th>
