--- a/app/frontend/src/app/pages/welcome/welcome.component.html
+++ b/app/frontend/src/app/pages/welcome/welcome.component.html
@@ -1,7 +1,7 @@
 <discovery-hero></discovery-hero>
 <!-- START Contract Vehicles Carousel -->
 <div>
-  <section class="usa-grid usa-section section-contracts">
+  <section class="usa-grid usa-section section-contracts" aria-label="Contrat Vehicles in Discovery">
     <div class="usa-width-one-whole text-center pad-bottom">
       <h2 class="section-head">Contract Vehicles on Discovery</h2>
     </div>
