--- a/app/frontend/src/app/common/hero.component.css
+++ b/app/frontend/src/app/common/hero.component.css
@@ -1,12 +1,6 @@
 .usa-hero {
   padding-top: 50px;
   padding-bottom: 50px;
-}
-.usa-hero h2 {
-  font-size: 1.5em !important;
-  font-weight: normal !important;
-}
-.usa-hero {
   background-color: #112e51;
   background-image: url('/frontend/assets/images/hero.jpg');
   box-shadow: 0 2px 5px rgb(177, 177, 177);
@@ -39,4 +33,8 @@ select {
   padding: 15px;
   width: 280px;
   text-align: left;
+}
+.tooltip:after,
+[data-tooltip]:after {
+  border: 1px solid white !important;
 }
