--- a/app/frontend/src/app/pages/search/filters/filter-keywords.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-keywords.component.html
@@ -5,7 +5,7 @@
 
   <div class="usa-search">
 
-    <discovery-autocomplete (emitCode)="addKeywords($event)" [id]="id" [placeholder]="placeholder" [keywords_results]="keywords_results"></discovery-autocomplete>
+    <discovery-autocomplete (emitCode)="addKeywords($event)" [id]="id" [placeholder]="name" [keywords_results]="keywords_results"></discovery-autocomplete>
 
   </div>
   <ul *ngIf="items_selected" class="items-selected">
