--- a/app/frontend/src/app/pages/search/filters/filter-zone.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-zone.component.html
@@ -4,13 +4,15 @@
 <div id="{{id}}" class="usa-accordion-content" [attr.aria-hidden]="!opened">
   <div class="usa-search form-horizontal">
     <discovery-spinner *ngIf="!items"></discovery-spinner>
-    <select id="select_zone" [disabled]="!items" [(ngModel)]="zone" class="items-input">
-      <option value="0" selected="selected">Select Zone --</option>
-      <option *ngFor="let item of items; let i = index" value="{{item.value}}">{{item.description}}</option>
-    </select>
-    <button class="btn-add" type="submit" (click)="addZone()" [disabled]="!items || zone === '0'">
-      <span>Add</span>
-    </button>
+    <div>
+      <select id="select_zone" title="Select Zone" [disabled]="!items" [(ngModel)]="zone" class="items-input">
+        <option value="0" selected="selected">Select Zone --</option>
+        <option *ngFor="let item of items; let i = index" value="{{item.value}}">{{item.description}}</option>
+      </select>
+      <button class="btn-add" type="submit" (click)="addZone()" [disabled]="!items || zone === '0'">
+        <span>Add</span>
+      </button>
+    </div>
   </div>
   <ul *ngIf="items_selected" class="items-selected">
     <li *ngFor="let zone of items_selected">
