--- a/app/frontend/src/app/pages/search/search.component.html
+++ b/app/frontend/src/app/pages/search/search.component.html
@@ -1,4 +1,5 @@
 <div class="mask">
+  <h1 id="h1-advanced">Advanced Search</h1>
   <div id="slides-container">
     <div id="slide-search" class="slide animated">
       <div>
@@ -38,12 +39,12 @@
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
                   <li role="presentation" [class.active]="vw_contracts">
-                    <a aria-controls="contracts" role="tab" data-toggle="tab" (click)="viewContracts()">
+                    <a aria-controls="contracts" data-toggle="tab" (click)="viewContracts()">
                       <h3 class="alt">Contracts</h3>
                     </a>
                   </li>
                   <li role="presentation" [class.active]="vw_vendors">
-                    <a aria-controls="vendors" role="tab" data-toggle="tab" (click)="viewVendors()">
+                    <a aria-controls="vendors" data-toggle="tab" (click)="viewVendors()">
                       <h3 class="alt">Vendors</h3>
                     </a>
                   </li>
@@ -62,8 +63,11 @@
                           <p class="usa-alert-text">Please change your criteria and re-submit.</p>
                         </div>
                       </div>
-
-                      <div id="scroll-tip" class="text-right pad-top-bottom hide animated">
+                      <h3 *ngIf="!vendors_no_results" class="alt">Comparing <strong>{{compare_tbl.length}}</strong>
+                        Contract Vehicles
+                        with a total of
+                        <strong>{{total_vendors_met_criteria}} vendors</strong></h3>
+                      <div class="text-right pad-top-bottom hide animated scroll-tip">
                         <strong>Scroll right</strong> to see more <span class="icon-arrow-right pull-right"></span>
                       </div>
                       <div id="overflow-compare" *ngIf="!vendors_no_results">
@@ -82,95 +86,105 @@
                                 <p class="usa-alert-text">Please change your criteria and re-submit.</p>
                               </div>
                             </div>
-                            <div *ngIf="compare_tbl.length>0" [hidden]="total_vendors_met_criteria===0">
-                              <div class="pad-top">
-                                <h3 class="alt">Comparing <strong>{{compare_tbl.length}}</strong> Contract Vehicles
-                                  with a total of
-                                  <strong>{{total_vendors_met_criteria}} vendors</strong></h3>
+                            <div *ngIf="compare_tbl.length>0" [hidden]="total_vendors_met_criteria===0" class="pad-top">
+
+
+                              <div id="tbl-compare-container">
+                                <div id="col-white"></div>
+                                <table id="tbl-compare" class="usa-table-borderless margin-bottom" *ngIf="compare_tbl.length>0">
+                                  <thead>
+                                    <tr>
+                                      <th scope="col">&nbsp;</th>
+                                      <th scope="col" class="th-vehicle" *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.description}}</th>
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                    <tr>
+                                      <th scope="row">Total Vendors in Vehicle</th>
+                                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.vendors_total}}</td>
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">Vendors that meet your criteria </th>
+                                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><span
+                                          *ngIf="vehicle.vendors_results_total===0">{{vehicle.vendors_results_total}}</span><button
+                                          *ngIf="vehicle.vendors_results_total!=0" (click)="viewVehicleVendors(vehicle.id)"
+                                          class="tooltip-bottom" data-tooltip="Select to see vendors">{{vehicle.vendors_results_total}}</button></td>
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">Eligible Service Categories
+                                        <div class="lnk-more tooltip-right" data-tooltip="See all Service Categories / Pools /
+                                          SINs associated with this vehicle">
+                                          <discovery-lnk-toggle-heights [toggle_id]="'row-serv-cat'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
+                                        </div>
+                                      </th>
+                                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
+                                        <div class="row-serv-cat toggle_more" [class.show_all]="more_info">
+                                          <discovery-list [hide_others]="true" [selected]="service_categories_selected"
+                                            [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.service_categories"
+                                            [key]="'name'"></discovery-list>
+                                          <div class="gradient"></div>
+                                        </div>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">NAICs in Vehicle
+                                        <div class="lnk-more tooltip-right" data-tooltip="See all NAICS considered in scope
+                                          of each vehicle. Highlighted numbers reflect your filters.">
+                                          <discovery-lnk-toggle-heights [toggle_id]="'row-naics'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
+                                        </div>
+                                      </th>
+                                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
+                                        <div class="row-naics toggle_more" [class.show_all]="more_info">
+                                          <discovery-list [selected]="naics_selected" [columns]="'2'" [show_all]="true"
+                                            [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.naics" [key]="'id'"></discovery-list>
+                                          <div class="gradient"></div>
+                                        </div>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">PSCs in Vehicle
+                                        <div class="lnk-more tooltip-right" data-tooltip="See all PSCs considered in scope of
+                                          each vehicle.">
+                                          <discovery-lnk-toggle-heights [toggle_id]="'row-pscs'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
+                                        </div>
+                                      </th>
+                                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
+                                        <div class="row-pscs toggle_more" [class.show_all]="more_info">
+                                          <discovery-list [selected]="pscs_selected" [columns]="'2'" [show_all]="true"
+                                            [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.pscs" [key]="'id'"></discovery-list>
+                                          <div class="gradient"></div>
+                                        </div>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">Spend Under Management Tier <a href="https://www.gsa.gov/cdnstatic/BIC_%26_SUM_One-pager_252018.pdf"
+                                          target="_blank" class="info-tip db tooltip-right" data-tooltip="Spend Under Management supports OMB goals for agencies. Click to learn more."></a></th>
+                                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
+                                        <p class="min-h">{{vehicle.tier}}</p>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">Contract Details</th>
+                                      <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><a
+                                          href="mailto:{{vehicle.gsa}}" *ngIf="vehicle.gsa !== ''" class="min-h">Contract
+                                          Point of Contact</a> <a href="{{vehicle.ordering_guide}}" title="Ordering guide for "
+                                          *ngIf="vehicle.ordering_guide !== ''" target="_blank" class="min-h db">Ordering
+                                          Guide</a></td>
+                                    </tr>
+
+
+                                  </tbody>
+                                </table>
                               </div>
 
-                              <table id="tbl-compare" class="usa-table-borderless margin-bottom" *ngIf="compare_tbl.length>0">
-                                <thead>
-                                  <tr>
-                                    <th scope="col"></th>
-                                    <th scope="col" class="th-vehicle" *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.description}}
-
-                                    </th>
-
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                  <tr>
-                                    <th scope="row">Total Vendors in Vehicle</th>
-                                    <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.vendors_total}}</td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">Vendors that meet your criteria </th>
-                                    <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><span
-                                        *ngIf="vehicle.vendors_results_total===0">{{vehicle.vendors_results_total}}</span><button
-                                        *ngIf="vehicle.vendors_results_total!=0" (click)="viewVehicleVendors(vehicle.id)">{{vehicle.vendors_results_total}}</button></td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">Eligible Service Categories
-                                      <discovery-lnk-toggle-heights [toggle_id]="'row-serv-cat'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
-                                    </th>
-                                    <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
-                                      <div class="row-serv-cat toggle_more" [class.show_all]="more_info">
-                                        <discovery-list [hide_others]="true" [selected]="service_categories_selected"
-                                          [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.service_categories"
-                                          [key]="'name'"></discovery-list>
-                                        <div class="gradient"></div>
-                                      </div>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">NAICs in Vehicle
-                                      <discovery-lnk-toggle-heights [toggle_id]="'row-naics'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
-                                    </th>
-                                    <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
-                                      <div class="row-naics toggle_more" [class.show_all]="more_info">
-                                        <discovery-list [selected]="naics_selected" [columns]="'2'" [show_all]="true"
-                                          [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.naics" [key]="'id'"></discovery-list>
-                                        <div class="gradient"></div>
-                                      </div>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">PSCs in Vehicle
-                                      <discovery-lnk-toggle-heights [toggle_id]="'row-pscs'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
-                                    </th>
-                                    <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
-                                      <div class="row-pscs toggle_more" [class.show_all]="more_info">
-                                        <discovery-list [selected]="pscs_selected" [columns]="'2'" [show_all]="true"
-                                          [id]="vehicle.id" [items_to_show]="num_show" [items]="vehicle.pscs" [key]="'id'"></discovery-list>
-                                        <div class="gradient"></div>
-                                      </div>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">SUM Tier</th>
-                                    <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.tier}}</td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">GSA Point of Contact</th>
-                                    <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><a
-                                        href="mailto:{{vehicle.gsa}}" *ngIf="vehicle.gsa !== ''">Contact email</a></td>
-                                  </tr>
-
-                                  <tr>
-                                    <th scope="row">Ordering Guide</th>
-                                    <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><a
-                                        href="{{vehicle.ordering_guide}}" title="Ordering guide for " *ngIf="vehicle.ordering_guide !== ''"
-                                        target="_blank">Download
-                                        Guide</a></td>
-                                  </tr>
-                                </tbody>
-                              </table>
                             </div>
                           </div>
                         </div>
                         <!-- End Scroll Window -->
 
+                      </div>
+                      <div class="text-right pad-top-bottom hide animated scroll-tip">
+                        <strong>Scroll right</strong> to see more <span class="icon-arrow-right pull-right"></span>
                       </div>
                     </div>
                     <!-- Vendors results -->
