--- a/app/frontend/src/app/pages/search/filters/filter-contract-obligated-amount.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-contract-obligated-amount.component.html
@@ -1,4 +1,4 @@
-<div class="tooltip-top" data-tooltip="Thanks for your interest! We haven't implemented this filter yet, but your clicks let us know if it would be worth including. Check back later to explore new features!">
+<div class="tooltip">
   <button [disabled]="disable" class="usa-accordion-button" [attr.aria-expanded]="opened" [attr.aria-controls]="id">
     <!-- <span class="info-tip db tooltip-right pull-right" data-tooltip="Select value to return only
   vendors who have performed work
@@ -6,6 +6,8 @@
   (FPDS Reported)"></span> -->
     {{name}}
   </button>
+  <span class="tooltiptext">Thanks for your interest! We haven't implemented this filter yet, but your clicks let us
+    know if it would be worth including. Check back later to explore new features!</span>
 </div>
 <div id="{{id}}" class="usa-accordion-content" [attr.aria-hidden]="!opened">
   <input type="range" [min]="min" [max]="max" step="1000" [(ngModel)]="obligated_amount">
