--- a/app/frontend/src/app/pages/search/tbl-vendors.component.html
+++ b/app/frontend/src/app/pages/search/tbl-vendors.component.html
@@ -7,7 +7,7 @@
             'Show' : 'Hide'}} Small Business Designation</button>
     </div>
     <div>
-        <h3 class="alt"><a href="vendors/csv{{params}}" class="pull-right" target="_blank">
+        <h3 class="alt"><a href="csv/vendors{{params}}" class="pull-right" target="_blank">
                 Download
                 vendor data(CSV)</a><strong>{{items_total}} vendors</strong> meet your criteria.</h3>
     </div>
@@ -17,19 +17,22 @@
                 <th></th>
                 <th scope="col">Company</th>
                 <th scope="col" [hidden]="service_categories_selected.length===0">Eligible Service Categories</th>
-                <th scope="col" class="sbd tooltip-top" data-tooltip="Contract count for 5
-                years of work related
-                to search">Contract
-                    Actions</th>
-                <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Small Disadvantaged Business">SB</th>
-                <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Small Disadvantaged Business">SDB</th>
-                <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="8(A)">8(A)</th>
-                <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="HUBZone">HubZ</th>
-                <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Woman Owned">WO</th>
-                <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Veteran Owned">VO</th>
-                <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Service Disabled Veteran Owned">SDVO</th>
-                <th scope="col" [class.hide]="!sbd_col" class="sbd tooltip-bottom" data-tooltip="Veterans Affair VIP">VA
-                    VIP</th>
+                <th scope="col" class="sbd"><span class="tooltip left">Contract Actions<span class="tooltiptext">Contract
+                            count for 5 years of work related to search</span></span></th>
+                <th scope="col" [class.hide]="!sbd_col" class="sbd"><span class="tooltip">SB<span class="tooltiptext">Small
+                            Business</span></span></th>
+                <th scope="col" [class.hide]="!sbd_col" class="sbd"><span class="tooltip">SDB<span class="tooltiptext">Small
+                            Disadvantaged Business</span></span></th>
+                <th scope="col" [class.hide]="!sbd_col" class="sbd"><span class="tooltip">8(A)<span class="tooltiptext">8(A)</span></span></th>
+                <th scope="col" [class.hide]="!sbd_col" class="sbd"><span class="tooltip">HubZ<span class="tooltiptext">HUBZone</span></span></th>
+                <th scope="col" [class.hide]="!sbd_col" class="sbd"><span class="tooltip">WO<span class="tooltiptext">Woman
+                            Owned</span></span></th>
+                <th scope="col" [class.hide]="!sbd_col" class="sbd"><span class="tooltip">VO<span class="tooltiptext">Veteran
+                            Owned</span></span></th>
+                <th scope="col" [class.hide]="!sbd_col" class="sbd"><span class="tooltip">SDVO<span class="tooltiptext">Service
+                            Disabled Veteran Owned</span></span></th>
+                <th scope="col" [class.hide]="!sbd_col" class="sbd"><span class="tooltip left">VA VIP<span class="tooltiptext">Veterans
+                            Affair VIP</span></span></th>
 
             </tr>
         </thead>
@@ -61,5 +64,5 @@
         <button class="usa-button-secondary" (click)="prevPage()" title="Go to page {{prev}}" style="margin-right:10px"
             [disabled]="current_page===1 || !enable_paging">Previous</button>
         <button class="usa-button-secondary" (click)="nextPage()" title="Go to page {{next}}" [disabled]="current_page===num_total_pages">Next</button>
+
     </div>
-</div>
