Updating the Google Analytics html initialization in the Django index template.

--- a/app/discovery/templates/index.html
+++ b/app/discovery/templates/index.html
@@ -22,13 +22,18 @@
     </script>
 
     {% if GA_TRACKING_ID %}
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{GA_TRACKING_ID}}"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', "{{GA_TRACKING_ID}}");
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', "{{GA_TRACKING_ID}}", 'auto');
+
+      ga('require', 'eventTracker');
+      ga('require', 'outboundLinkTracker');
+      ga('require', 'urlChangeTracker');
+
+      ga('send', 'pageview');
     </script>
+    <script async src="https://www.google-analytics.com/analytics.js"></script>
+    <script async src="{% static 'frontend/assets/autotrack/autotrack.js' %}"></script>
     {% endif %}
 
     <script type="text/javascript" src="{% static 'frontend/assets/uswds/js/uswds.min.js' %}"></script>
